<package>
  <name>rcprg_ros_utils</name>
  <version>1.0.0</version>
  <description>
    This package contains python scripts of routines for various robotic applications.
  </description>
  <author email="dawid.seredynski@gmail.com">Dawid Seredynski</author>
  <maintainer email="dawid.seredynski@gmail.com">Dawid Seredynski</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

</package>
